--- a/CCS-Uploader/Controllers/Wizard/EventsView.xib
+++ b/CCS-Uploader/Controllers/Wizard/EventsView.xib
@@ -184,11 +184,11 @@
             </connections>
         </popover>
         <customView id="EPI-3f-56G">
-            <rect key="frame" x="0.0" y="0.0" width="391" height="170"/>
+            <rect key="frame" x="0.0" y="0.0" width="391" height="212"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button id="4Sh-KL-fXq">
-                    <rect key="frame" x="18" y="127" width="355" height="25"/>
+                    <rect key="frame" x="18" y="169" width="355" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Hide events that are not assigned to me (QEMS only)" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="iiP-eW-zzb">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -196,7 +196,7 @@
                     </buttonCell>
                 </button>
                 <button id="GBt-oj-5a8">
-                    <rect key="frame" x="18" y="100" width="355" height="25"/>
+                    <rect key="frame" x="18" y="142" width="355" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Hide events with no date" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="qj6-ky-FB1">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -204,7 +204,7 @@
                     </buttonCell>
                 </button>
                 <button id="XmP-nR-Kk7">
-                    <rect key="frame" x="18" y="73" width="355" height="25"/>
+                    <rect key="frame" x="18" y="115" width="355" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Hide active events" bezelStyle="regularSquare" imagePosition="left" inset="2" id="289-NG-1bJ">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -212,7 +212,7 @@
                     </buttonCell>
                 </button>
                 <button id="g8O-bp-pwc">
-                    <rect key="frame" x="18" y="46" width="355" height="25"/>
+                    <rect key="frame" x="18" y="88" width="355" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Show events in a date range between:" bezelStyle="regularSquare" imagePosition="left" inset="2" id="QQv-So-gvY">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -223,7 +223,7 @@
                     </connections>
                 </button>
                 <datePicker verticalHuggingPriority="750" id="Quc-vU-kXQ">
-                    <rect key="frame" x="107" y="18" width="115" height="27"/>
+                    <rect key="frame" x="107" y="60" width="115" height="27"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <datePickerCell key="cell" enabled="NO" borderStyle="bezel" alignment="left" id="CTZ-Ss-qBh">
                         <font key="font" metaFont="system"/>
@@ -235,7 +235,7 @@
                     </datePickerCell>
                 </datePicker>
                 <datePicker verticalHuggingPriority="750" id="Rfi-6a-0h9">
-                    <rect key="frame" x="259" y="18" width="115" height="27"/>
+                    <rect key="frame" x="259" y="60" width="115" height="27"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <datePickerCell key="cell" enabled="NO" borderStyle="bezel" alignment="left" id="d69-9Q-Kke">
                         <font key="font" metaFont="system"/>
@@ -247,7 +247,7 @@
                     </datePickerCell>
                 </datePicker>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="91j-Ee-Z4I">
-                    <rect key="frame" x="225" y="21" width="28" height="17"/>
+                    <rect key="frame" x="225" y="63" width="28" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="and" id="BcR-rI-fgE">
                         <font key="font" metaFont="system"/>
@@ -255,6 +255,17 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <button verticalHuggingPriority="750" id="yE9-Lo-1k1">
+                    <rect key="frame" x="14" y="13" width="363" height="32"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="push" title="Close and Apply Filters" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ENW-Qj-PR4">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="closeAdvancedSearch:" target="-2" id="pQy-bE-htQ"/>
+                    </connections>
+                </button>
             </subviews>
         </customView>
     </objects>
