--- a/CCS-Uploader/Controllers/Wizard/BrowseView.xib
+++ b/CCS-Uploader/Controllers/Wizard/BrowseView.xib
@@ -9,8 +9,10 @@
         <customObject id="-2" userLabel="File's Owner" customClass="BrowseViewController">
             <connections>
                 <outlet property="advancedOptionsPopover" destination="Ev0-cL-VcC" id="aUQ-CH-x6i"/>
+                <outlet property="chkAutoCategorizeImages" destination="QfY-Fh-1Qt" id="poa-5n-WWt"/>
                 <outlet property="chkAutoNumberFrames" destination="yi3-c7-3TE" id="BsY-2L-hGx"/>
                 <outlet property="chkAutoNumberRolls" destination="gyN-Yg-Rzh" id="Y0W-1a-vsf"/>
+                <outlet property="chkHonourFramesPerRoll" destination="1nF-8n-3tE" id="Ud1-LI-QjM"/>
                 <outlet property="chkPutImagesInCurrentlySelectedRoll" destination="ht2-c3-hbU" id="MAZ-QB-01x"/>
                 <outlet property="includeNewlyAddedImagesSheet" destination="rMF-xz-va9" id="Coe-iE-tWO"/>
                 <outlet property="tblRolls" destination="Eum-26-wUS" id="Cjw-xt-uA5"/>
@@ -124,7 +126,7 @@
                                             </popUpButton>
                                         </prototypeCellViews>
                                     </tableColumn>
-                                    <tableColumn identifier="Size" width="73.09375" minWidth="10" maxWidth="3.4028234663852886e+38" id="8Oo-Nr-Ihi">
+                                    <tableColumn identifier="Size" width="84.34375" minWidth="10" maxWidth="3.4028234663852886e+38" id="8Oo-Nr-Ihi">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Size">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -138,11 +140,11 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="9aY-dt-YWB">
-                                                <rect key="frame" x="298" y="1" width="73" height="17"/>
+                                                <rect key="frame" x="298" y="1" width="84" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="oqY-00-HxZ">
-                                                        <rect key="frame" x="0.0" y="-2" width="73" height="17"/>
+                                                        <rect key="frame" x="0.0" y="-2" width="84" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="center" title="Table View Cell" id="Hph-wY-92d">
                                                             <font key="font" metaFont="system"/>
@@ -171,7 +173,7 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="O1Y-Dh-ydi">
-                                                <rect key="frame" x="374" y="1" width="59" height="17"/>
+                                                <rect key="frame" x="385" y="1" width="59" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="77U-kD-C7R">
@@ -203,7 +205,7 @@
                                         </textFieldCell>
                                         <prototypeCellViews>
                                             <tableCellView id="n0v-na-hg1">
-                                                <rect key="frame" x="436" y="1" width="77" height="17"/>
+                                                <rect key="frame" x="447" y="1" width="77" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="BHP-SD-3MI">
@@ -217,12 +219,12 @@
                                                 </connections>
                                             </tableCellView>
                                             <tableCellView id="DFK-Rb-561">
-                                                <rect key="frame" x="436" y="20" width="77" height="17"/>
+                                                <rect key="frame" x="447" y="20" width="77" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             </tableCellView>
                                         </prototypeCellViews>
                                     </tableColumn>
-                                    <tableColumn identifier="CurrentTask" width="230.11328125" minWidth="10" maxWidth="3.4028234663852886e+38" id="Avn-Xu-0Gd">
+                                    <tableColumn identifier="CurrentTask" width="222.86328125" minWidth="10" maxWidth="3.4028234663852886e+38" id="Avn-Xu-0Gd">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Current Task">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -236,11 +238,11 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="x4M-RE-eK9">
-                                                <rect key="frame" x="516" y="1" width="230" height="17"/>
+                                                <rect key="frame" x="527" y="1" width="223" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="BRF-8Z-QKH">
-                                                        <rect key="frame" x="24" y="-2" width="206" height="17"/>
+                                                        <rect key="frame" x="24" y="-2" width="199" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="JQn-G0-7b9">
                                                             <font key="font" metaFont="system"/>
@@ -272,7 +274,7 @@
                                         </textFieldCell>
                                         <prototypeCellViews>
                                             <button verticalHuggingPriority="750" id="Og0-gY-eXX">
-                                                <rect key="frame" x="749" y="1" width="64" height="17"/>
+                                                <rect key="frame" x="753" y="1" width="64" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                 <buttonCell key="cell" type="inline" title="View" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="UAY-u1-cuj">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -297,7 +299,7 @@
                                         </textFieldCell>
                                         <prototypeCellViews>
                                             <button verticalHuggingPriority="750" id="6VJ-fc-41B">
-                                                <rect key="frame" x="816" y="1" width="64" height="17"/>
+                                                <rect key="frame" x="820" y="1" width="64" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                 <buttonCell key="cell" type="inline" title="Delete" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="39K-GQ-DaQ">
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -373,11 +375,11 @@
             </subviews>
         </customView>
         <customView id="Uko-gK-bVM">
-            <rect key="frame" x="0.0" y="0.0" width="369" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="337" height="142"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button id="QfY-Fh-1Qt">
-                    <rect key="frame" x="18" y="114" width="270" height="18"/>
+                    <rect key="frame" x="18" y="106" width="270" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Auto categorize images by folder name" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="4Cb-gi-522">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -385,7 +387,7 @@
                     </buttonCell>
                 </button>
                 <button id="ht2-c3-hbU">
-                    <rect key="frame" x="18" y="90" width="301" height="18"/>
+                    <rect key="frame" x="18" y="84" width="301" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Put new images in the currently selected roll" bezelStyle="regularSquare" imagePosition="left" inset="2" id="S6J-B9-2fx">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -393,7 +395,7 @@
                     </buttonCell>
                 </button>
                 <button id="gyN-Yg-Rzh">
-                    <rect key="frame" x="18" y="66" width="228" height="18"/>
+                    <rect key="frame" x="18" y="62" width="228" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Auto rename folders numerically" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Ccw-2h-4oa">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -401,7 +403,7 @@
                     </buttonCell>
                 </button>
                 <button id="yi3-c7-3TE">
-                    <rect key="frame" x="18" y="42" width="229" height="18"/>
+                    <rect key="frame" x="18" y="40" width="229" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Auto rename images numerically" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="jn5-eF-mgu">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -409,7 +411,7 @@
                     </buttonCell>
                 </button>
                 <button id="1nF-8n-3tE">
-                    <rect key="frame" x="17" y="18" width="253" height="18"/>
+                    <rect key="frame" x="18" y="18" width="253" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Create new folder after 9999 images" bezelStyle="regularSquare" imagePosition="left" inset="2" id="cR5-gj-lyr">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -423,7 +425,7 @@
                 <outlet property="view" destination="Uko-gK-bVM" id="NqI-ar-HY9"/>
             </connections>
         </viewController>
-        <popover behavior="t" id="Ev0-cL-VcC">
+        <popover id="Ev0-cL-VcC">
             <connections>
                 <outlet property="contentViewController" destination="UNq-tH-Zvr" id="vFf-fP-bir"/>
             </connections>
